<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#00CC00"
            android:padding="20dp">

            <ImageView
                android:id="@+id/proile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/a"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/proile_image"
                android:includeFontPadding="false"
                android:text="@string/full_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/proile_image" />

            <TextView
                android:id="@+id/email_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullname"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/proile_image"
                android:includeFontPadding="false"
                android:text="@string/email_1"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_toEndOf="@+id/proile_image"
                android:layout_marginStart="20dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_1"
                android:layout_width='match_parent'
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/your_task">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/no_task"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comepelte"
                android:id="@+id/complete_task"
                android:layout_gravity="right"
                android:elevation="0dp"
                tools:targetApi="lollipop" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width='match_parent'
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/full_name"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width='match_parent'
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/email"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width='match_parent'
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/pone_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profilePhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/phoneno"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width='match_parent'
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/address"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width='match_parent'
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/district">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/district"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width='match_parent'
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/state"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width='match_parent'
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profilePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/password"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updateData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>